# WindowHider

./: README.md
backend/: CMakeLists.txt  LICENSE  README.md
backend/include/: injector.h  window_manager.h
backend/release/: payload.exp  payload.lib  payload_log.txt
backend/src/: injector.cpp  main.cpp  window_manager.cpp
backend/src/payload/: payload.cpp
frontend/: .gitignore  main.js  package-lock.json  package.json  payload_log.txt  tailwind.config.js  webpack.config.js
frontend/app/: globals.css  page.jsx
frontend/app/components/: window-hider.jsx
frontend/app/components/ui/: badge.tsx  button.tsx  scroll-area.tsx  switch.tsx
frontend/public/: index.html  styles.css
frontend/public/js/: bundle.js
